edit daftar + login + fitur search

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -26,7 +26,7 @@ font-family: 'Lato', sans-serif;
 10.	Pricing
 11.	Testimonial
 12. Client
-11.	Testemonial 
+11.	Testemonial
 14. Contact
 15. New-project
 16.	Footer
@@ -62,7 +62,7 @@ a,a:hover,a:active,a:focus {
 	font-size:14px;
 	padding:0;
 }
-h1,h2,h3,h4,h5,h6 { 
+h1,h2,h3,h4,h5,h6 {
 	margin: 0;
 	text-transform: capitalize;
 }
@@ -78,7 +78,7 @@ ul{
 }
 ul li {
 	list-style: none;
-	
+
 }
 select,input,textarea{box-shadow:none;outline:0!important;}
 
@@ -89,11 +89,11 @@ html,body{
     z-index: 2;
 }
 [placeholder]:focus::-webkit-input-placeholder {
-  -webkit-transition: opacity 0.3s 0.3s ease; 
-  -moz-transition: opacity 0.3s 0.3s ease; 
-  -ms-transition: opacity 0.3s 0.3s ease; 
-  -o-transition: opacity 0.3s 0.3s ease; 
-  transition: opacity 0.3s 0.3s ease; 
+  -webkit-transition: opacity 0.3s 0.3s ease;
+  -moz-transition: opacity 0.3s 0.3s ease;
+  -ms-transition: opacity 0.3s 0.3s ease;
+  -o-transition: opacity 0.3s 0.3s ease;
+  transition: opacity 0.3s 0.3s ease;
   opacity: 0;
 }
 
@@ -122,12 +122,12 @@ html,body{
 	margin-right: 50px;
 	font-size:16px;
 	font-family: 'Poppins', sans-serif;
-	-webkit-transition: .5s; 
-	-moz-transition:.5s; 
-	-ms-transition:.5s; 
+	-webkit-transition: .5s;
+	-moz-transition:.5s;
+	-ms-transition:.5s;
 	-o-transition:.5s;
     transition: .5s;
-	
+
 }
 .header-left li  i{
 	margin-right:7px;
@@ -141,7 +141,7 @@ html,body{
 .header-right {
 	color: #888;
 	font-family: 'Poppins', sans-serif;
-	
+
 }
 .header-right li {
 	display:inline-block;
@@ -150,12 +150,12 @@ html,body{
 	font-size:16px;
 	font-family: 'Poppins', sans-serif;
 	padding-bottom: 7px;
-	-webkit-transition: .5s; 
-	-moz-transition:.5s; 
-	-ms-transition:.5s; 
+	-webkit-transition: .5s;
+	-moz-transition:.5s;
+	-ms-transition:.5s;
 	-o-transition:.5s;
     transition: .5s;
-	
+
 }
 .header-right li a:hover{
 	color:#7370d8;
@@ -177,7 +177,7 @@ html,body{
 
 /* header-right */
 
-/* modal 
+/* modal
 --------------------*/
 .modal-header {
     border-bottom: none;
@@ -192,7 +192,7 @@ html,body{
     margin-top: 25px;
     background: transparent;
     border-color: #eb1b33;
-    color: #eb1b33;	
+    color: #eb1b33;
 }
 /*-------------------------------------
 		3. Menu
@@ -254,9 +254,9 @@ html,body{
 	font-family: 'Lato', sans-serif;
 	margin-top:18px;
 	padding-left: 27px;
-	-webkit-transition: .5s; 
-	-moz-transition:.5s; 
-	-ms-transition:.5s; 
+	-webkit-transition: .5s;
+	-moz-transition:.5s;
+	-ms-transition:.5s;
 	-o-transition:.5s;
     transition: .5s;
 }
@@ -381,9 +381,9 @@ html,body{
 	margin-bottom: 30px;
 	outline:0;
 	box-shadow:none;
-	-webkit-transition:.5s; 
-	-moz-transition:.5s; 
-	-ms-transition:.5s; 
+	-webkit-transition:.5s;
+	-moz-transition:.5s;
+	-ms-transition:.5s;
 	-o-transition:.5s;
     transition: .5s;
 }
@@ -394,12 +394,12 @@ html,body{
 	 border: 1px solid #fff;
 }
 .single-slide-item.slide-1 {
-	background-image:url(../../assets/images/banner/banner3.jpg);
+	background-image:url(../../images/banner/banner3.jpg);
 	position:relative;
 	z-index:1;
 }
 .single-slide-item.slide-2 {
-	background-image:url(../../assets/images/banner/banner4.jpg);
+	background-image:url(../../images/banner/banner4.jpg);
 	position:relative;
 	z-index:1;
 }
@@ -460,9 +460,9 @@ html,body{
 	font-weight:700;
 	font-family: 'Lato', sans-serif;
 	border-radius: 50%;
-	-webkit-transition:.5s; 
-	-moz-transition:.5s; 
-	-ms-transition:.5s; 
+	-webkit-transition:.5s;
+	-moz-transition:.5s;
+	-ms-transition:.5s;
 	-o-transition:.5s;
     transition: .5s;
 }
@@ -543,9 +543,9 @@ html,body{
 	overflow-x:hidden;
 	margin-top: 15px;
 	opacity:1;
-	-webkit-transition: .5s; 
-	-moz-transition:.5s; 
-	-ms-transition:.5s; 
+	-webkit-transition: .5s;
+	-moz-transition:.5s;
+	-ms-transition:.5s;
 	-o-transition:.5s;
     transition: .5s;
 }
@@ -563,9 +563,9 @@ html,body{
 .we-do-img {
     margin-right: 5px;
 	border-radius:50%;
-	-webkit-transition: .5s; 
-	-moz-transition:.5s; 
-	-ms-transition:.5s; 
+	-webkit-transition: .5s;
+	-moz-transition:.5s;
+	-ms-transition:.5s;
 	-o-transition:.5s;
     transition: .5s;
 }
@@ -616,13 +616,13 @@ html,body{
 	margin-top: 103px;
 }
 .about-us h2 {
-	color:#4d4e54;	
+	color:#4d4e54;
 	font-size:30px;
 	font-family: 'Playfair Display', serif;
 	font-weight: 700;
 }
 .about-us p{
-	color:#888;	
+	color:#888;
 	font-size:16px;
 	font-family: 'Poppins', sans-serif;
 	line-height: 1.7;
@@ -669,20 +669,20 @@ html,body{
 	max-width: 304px;
     margin: 0 auto;
    	margin-bottom: 15px;
-	-webkit-transition: .5s; 
-	-moz-transition:.5s; 
-	-ms-transition:.5s; 
+	-webkit-transition: .5s;
+	-moz-transition:.5s;
+	-ms-transition:.5s;
 	-o-transition:.5s;
     transition: .5s;
 }
 .service-txt h2 a{
-	color:#44454f;	
+	color:#44454f;
 	font-size:24px;
 	font-family: 'Playfair Display', serif;
 	padding: 47px 0 25px;
 }
 .service-txt p {
-	color:#756c6a;	
+	color:#756c6a;
 	font-size:16px;
 	font-family: 'Poppins', sans-serif;
 	line-height: 1.67;
@@ -754,7 +754,7 @@ a:focus.service-btn{
 	padding: 117px 0 109px;
 }
 .project-details{
-	
+
 }
 .project-content {
     margin-top:62px;
@@ -836,7 +836,7 @@ a:focus.service-btn{
     transition: .7s;
 }
 .isotope-overlay h3 a,.isotope-overlay  a{
-	color:#fff;	
+	color:#fff;
 	font-size:24px;
 	font-family: 'Lato', sans-serif;
 }
@@ -844,7 +844,7 @@ a:focus.service-btn{
 	margin-top: 20px;
 }
 .isotope-overlay p{
-	color:#fff;	
+	color:#fff;
 	font-size:14px;
 	font-family: 'Lato', sans-serif;
 	margin-top: 15px;
@@ -1017,7 +1017,7 @@ a:active.learn-btn{
 }
 
 /*-------------------------------------
-		10.	Pricing 
+		10.	Pricing
 --------------------------------------*/
 .pricing{
 	padding:115px 0 78px;
@@ -1120,7 +1120,7 @@ a:active.learn-btn{
 }
 
 /*-------------------------------------
-		11.	Testemonial 
+		11.	Testemonial
 --------------------------------------*/
 
 .testemonial{
@@ -1151,7 +1151,7 @@ a:active.learn-btn{
     margin: 5px 3px;
     border-radius:50%;
     background: transparent;
-    border: 2px solid #dfdeff;	
+    border: 2px solid #dfdeff;
 }
 .testemonial .owl-theme .owl-dots .owl-dot.active span{
     background: #7370d8;
@@ -1248,7 +1248,7 @@ a:active.learn-btn{
     -moz-transform:scale(1);
     -ms-transform:scale(1);
     -o-transform:scale(1);
-    transform:scale(1); 
+    transform:scale(1);
 	-webkit-transition: .5s;
     -moz-transition: .5s;
     -ms-transition: .5s;
@@ -1315,7 +1315,7 @@ a:active.learn-btn{
 }
 .single-news-box:hover .news-box-inner {
 	background: #f9faff;
-	
+
 }/*team-box-inner*/
 .single-news-box:hover{
 	box-shadow:0 5px 35px 0px rgba(115,112,215,.2);
@@ -1371,11 +1371,11 @@ a:active.learn-btn{
 .contact-form {
 	position: relative;
 	margin: 50px 0 0 0;
-	
+
 }
 .contact-form  .form-group {
     margin-bottom: 15px;
-	
+
 }
 .contact-form .form-control {
 	padding: 24px 21px;
@@ -1405,9 +1405,9 @@ a:active.learn-btn{
 	text-transform:uppercase;
 	font-family: 'Poppins', sans-serif;
 	margin-top: 3px;
-	-webkit-transition: .5s; 
-	-moz-transition:.5s; 
-	-ms-transition:.5s; 
+	-webkit-transition: .5s;
+	-moz-transition:.5s;
+	-ms-transition:.5s;
 	-o-transition:.5s;
     transition: .5s;
 }
@@ -1420,12 +1420,12 @@ a:active.learn-btn{
     letter-spacing: 2.5px;
     border-radius: 0px;
     font-size:14px;
-	-webkit-transition: .5s; 
-	-moz-transition:.5s; 
-	-ms-transition:.5s; 
+	-webkit-transition: .5s;
+	-moz-transition:.5s;
+	-ms-transition:.5s;
 	-o-transition:.5s;
     transition: .5s;
-	
+
 }
 
 .single-contact-btn:hover button.contact-btn {
@@ -1492,9 +1492,9 @@ a:active.learn-btn{
 	color: #fff;
 	margin-right:13px;
 	padding: 0px 12px 0px 0px;
-	-webkit-transition: .3s; 
-	-moz-transition:.3s; 
-	-ms-transition:.3s; 
+	-webkit-transition: .3s;
+	-moz-transition:.3s;
+	-ms-transition:.3s;
 	-o-transition:.3s;
     transition: .3s;
 
@@ -1528,9 +1528,9 @@ a:active.learn-btn{
 	text-transform: uppercase;
 	font-family: 'Lato', sans-serif;
 	font-weight: 700;
-	-webkit-transition:.5s; 
-	-moz-transition:.5s; 
-	-ms-transition:.5s; 
+	-webkit-transition:.5s;
+	-moz-transition:.5s;
+	-ms-transition:.5s;
 	-o-transition:.5s;
     transition: .5s;
 }
@@ -1610,7 +1610,7 @@ a:active.learn-btn{
 	color:#aaa;
 	padding-bottom: 20px;
 	text-transform:capitalize;
-	
+
 
 	-webkit-transition:all 0.2s linear;
 	-moz-transition:all 0.2s linear;
@@ -1738,7 +1738,7 @@ a:active.learn-btn{
 .foot-menu   li a,
 .foot-menu   li a:hover,
 .foot-menu   li a:focus{
-	
+
 }
 .foot-menu  li {
 	position:relative;
@@ -1789,7 +1789,7 @@ a:active.learn-btn{
 	font-family: 'Playfair Display', serif;
 	margin-bottom: 3px;
 	left: 15px;
-	
+
 }
 .about-part-content {
     position: relative;
@@ -1876,7 +1876,7 @@ a:active.learn-btn{
     top: 8.2%;
     left: 0.5%;
     height: 72%; */
-	
+
 }
 .main-timeline .timeline{
     position: relative;
@@ -1982,7 +1982,7 @@ a:active.learn-btn{
 	-ms-transform:translate(10px);
 	-o-transform:translate(10px);
 	transform:translate(10px);
-	
+
 }
 .blog-categories-list ul li a i{
 	padding-right: 10px;
@@ -1996,7 +1996,7 @@ a:active.learn-btn{
     display: -webkit-box;
     max-width: 240px;
     padding:0px 0 25px;
-    
+
 }
 .bl-img a img{
 	width: 100px;
@@ -2052,7 +2052,7 @@ a:active.learn-btn{
     transition: .5s;
 }
 
-.blogs-widget .btn:hover{	
+.blogs-widget .btn:hover{
 	color:#908edf;
 	border:1px solid #908edf;
 }
@@ -2063,13 +2063,13 @@ a:active.learn-btn{
     text-align: center;
 }
 
-.pagination-part .pagination>.active>a, 
+.pagination-part .pagination>.active>a,
 .pagination-part .pagination>.active>a:focus,
 .pagination-part .pagination>.active>a:hover,
 .pagination-part .pagination>.active>span,
 .pagination-part .pagination>.active>span:focus,
 .pagination-part .pagination>.active>span:hover {
-    
+
     color: #fff;
     cursor: pointer;
     background-color:#908edf;
@@ -2206,7 +2206,7 @@ a:active.learn-btn{
     font-size: 16px;
     font-family: 'Poppins', sans-serif;
 }
-.bl-single-tag p span a{ 
+.bl-single-tag p span a{
 	color: #636363;
 	text-transform: capitalize;
 }/*.bl-list-icon */
@@ -2256,7 +2256,7 @@ a:active.learn-btn{
 	display: -webkit-box;
 	padding-bottom:43px;
 	margin-bottom: 38px;
-	
+
 }
 .xtra-comment-body{
 	border-bottom: 1px solid #dfdfdf;
@@ -2318,9 +2318,9 @@ a:active.learn-btn{
     background:#7370d8;
 	border:1px solid #7370d8;
 	border-radius:5px;
-	-webkit-transition: .5s; 
-	-moz-transition:.5s; 
-	-ms-transition:.5s; 
+	-webkit-transition: .5s;
+	-moz-transition:.5s;
+	-ms-transition:.5s;
 	-o-transition:.5s;
     transition: .5s;
 	z-index: 2;
